<resources>
    <string name="app_name">AndroidTutorials</string>
    <string name="hello_trainee">Hello Trainee!!</string>
    <string name="text_view_scrollview"><![CDATA[TatvaSoft is a CMMi Level 3 & Microsoft Gold partner Software Development Company offering software development services on diverse technology platforms, like Microsoft, Java, PHP, SharePoint, Biztalk, Open Source, Big Data, BI, & Mobile. With rich and varied experience of 18 years in software development and stringent quality standards, we offer utmost qualitative, on-time and cost-effective software solutions. We serve clientele across the industries and globe with offices in US, Canada, UK, Australia, and Development Center in India with a workforce of 810 IT professionals. We have successfully completed 1800+ projects with 700+ SMEs and Fortune 500 companies. Why TatvaSoft: -> CMMI Level 3 Software Development Company -> Microsoft Gold Partner -> World Class Development Centers -> 18 Years of IT Outsourcing Services Experience -> Intellectual Property Rights protection -> Approach to build long term relationship -> Global exposure and diverse expertise -> Onshore-offshore model -> Proper Hierarchy & Escalation path For more details, please visit our website: www.TatvaSoft.com Our Locations: 1. Texas, USA Tel: +1 518 282 4642 2. Toronto, Canada Tel : +1 647 978 7562 3. London, UK Tel : +44 (0)207 947 4950 4. Sydney, Australia Tel : +61 2 9844 5446 5. Melbourne, Australia Tel : +61 3 9581 2659 6. Head Office: Ahmedabad, India Tel: +91 960 142 1472-]]></string>
    <string name="button">Button</string>
    <string name="button_clicked">Button Clicked</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="let_s_get_info_about_tatvasoft">Let\'s get info about Tatvasoft...</string>
    <string name="open_website">Open website</string>
    <string name="call_tatvasoft">Call Tatvasoft</string>
    <string name="get_location">Get Location</string>
    <string name="want_to_search_anything">Want to Search Anything??</string>
    <string name="search">Search</string>
    <string name="next">Next</string>
    <string name="activity_lifecycle">Activity LifeCycle</string>
    <string name="send_message">SEND MESSAGE</string>
</resources>