<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ImplicitIntentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/implicit_intent"
        android:padding="20dp"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="184dp"
        tools:layout_editor_absoluteY="43dp"
        android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/want_to_search_anything"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:background="#E4DCDC"/>
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:onClick="clickIntent"
            android:layout_margin="20dp"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/let_s_get_info_about_tatvasoft"
        android:textSize="20sp"
        android:fontFamily="serif"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"/>

    <Button
        android:id="@+id/btnWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_website"
        android:onClick="clickIntent"
        android:layout_margin="20dp"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_tatvasoft"
        android:onClick="clickIntent"
        android:layout_margin="20dp"
        android:padding="10dp"/>
    <Button
        android:id="@+id/btnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_location"
        android:onClick="clickIntent"
        android:layout_margin="20dp"
        android:padding="10dp"/>

        <EditText
            android:id="@+id/etSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#E4DCDC"
            android:hint="Type message.."
            android:padding="10dp" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_message"
            android:onClick="clickIntent"
            android:layout_margin="20dp"
            android:padding="10dp"/>


    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="toLifeCycleActivity"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/next"
        />

    </LinearLayout>
</ScrollView>