<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <TextView
        android:id="@+id/helloTrainee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:padding="20dp"
        android:text="@string/hello_trainee"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/clickbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:text="@string/button"
        android:onClick="btnCLicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloTrainee"
        app:layout_constraintBottom_toTopOf="@id/tvBtnCLicked"
         />


    <TextView
        android:id="@+id/tvBtnCLicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/button_clicked"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clickbutton" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginBottom="100dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/clickbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloTrainee" />

    <Button
        android:id="@+id/nextButon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:onClick="toTextActivity"
        android:padding="20dp"
        android:text="NEXT"
        android:layout_marginBottom="20dp"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="OnClick" />


</androidx.constraintlayout.widget.ConstraintLayout>